deploy.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
  namespace: default
spec:
  containers:
    - name: web
      image: nginx
      ports:
        - containerPort: 80
