gateway_class.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: "ngc"
spec:
  controllerName: example.com/gateway-controller
