old_service.yml
apiVersion: v1
kind: Service
metadata: 
  name: nginx-service
  namespace: default
spec:
  selector:
    project: nginx
  ports:
    - protocol: TCP 
      port: 80
      targetPort: 8080
